<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.example.toto.bluetoothc.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="2dp"
    android:paddingTop="2dp"
    android:paddingRight="2dp"
    android:paddingBottom="2dp"
    android:background="@drawable/hatter"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:gravity="right">

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/bezar"
            android:background="@drawable/bezar"
            android:layout_marginLeft="7dp" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:baselineAligned="false"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/eszkozok"
            android:id="@+id/eszkozok"
            android:background="@drawable/conn"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="15dp"
            android:textStyle="bold"
            android:singleLine="false" />

        <Button
            android:layout_width="74dp"
            android:layout_height="40dp"
            android:text="@string/kapcsol"
            android:id="@+id/kapcsolat"
            android:background="@drawable/conn"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp" />

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/bont"
            android:id="@+id/bont"
            android:background="@drawable/conn"
            android:textStyle="bold" />

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/beallit"
            android:paddingLeft="0dp"
            android:background="@drawable/set"
            android:layout_marginLeft="7dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp" />

    </LinearLayout>

    <GridLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:paddingRight="3dp"
        android:paddingBottom="3dp"
        android:columnCount="3"
        android:rowCount="3"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp">

        <Button
            android:layout_width="78dp"
            android:layout_height="100dp"
            android:id="@+id/elore"
            android:layout_row="0"
            android:layout_column="1"
            android:background="@drawable/nyile"
            android:enabled="true"
            android:clickable="false" />

        <Button
            android:layout_width="78dp"
            android:layout_height="100dp"
            android:id="@+id/hatra"
            android:layout_row="2"
            android:layout_column="1"
            android:background="@drawable/nyilh"
            android:focusable="false"
            android:enabled="true"
            android:clickable="false" />

        <Button
            android:layout_width="100dp"
            android:layout_height="78dp"
            android:id="@+id/balra"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@drawable/nyilb"
            android:layout_marginLeft="5dp"
            android:enabled="true"
            android:clickable="false" />

        <Button
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:id="@+id/sorozat"
            android:layout_row="1"
            android:layout_column="1"
            android:background="@drawable/sorozat" />

        <Button
            android:layout_width="100dp"
            android:layout_height="78dp"
            android:id="@+id/jobbra"
            android:layout_row="1"
            android:layout_column="2"
            android:background="@drawable/nyilj"
            android:enabled="true"
            android:clickable="false" />
    </GridLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:background="@drawable/conn"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:paddingRight="2dp">

        <TextView
            android:layout_width="98dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/allapot"
            android:id="@+id/allapot"
            android:textColor="#000000"
            android:gravity="center|fill_vertical"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="218dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nincs"
            android:id="@+id/allapotsor"
            android:textColor="#cf0f09"
            android:gravity="left|center_vertical"
            android:textSize="17dp"
            android:textStyle="bold"
            android:paddingLeft="3dp"
            android:paddingRight="3dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:background="@drawable/conn"
        android:paddingLeft="2dp"
        android:paddingRight="2dp">

        <TextView
            android:layout_width="98dp"
            android:layout_height="30dp"
            android:text="@string/eszkoz"
            android:id="@+id/eszkozSz"
            android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="218dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="-"
            android:id="@+id/eszkoz"
            android:textSize="17dp"
            android:textStyle="bold"
            android:gravity="left|center_vertical"
            android:paddingLeft="3dp"
            android:paddingRight="3dp" />
    </LinearLayout>

</LinearLayout>
