<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.example.toto.bluetoothc.SettActivity"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:columnCount="2"
android:rowCount="10"
android:foregroundGravity="center_vertical|center_horizontal"
    android:background="@drawable/hatter"
    android:useDefaultMargins="false"
    android:rowOrderPreserved="false"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:text="E"
            android:id="@+id/textView"
            android:background="@drawable/conn"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#000000" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/elore"
            android:id="@+id/elore"
            android:layout_row="0"
            android:layout_column="0"
            android:background="@drawable/conn"
            android:gravity="center_vertical|center_horizontal"
            android:textStyle="bold"
            android:textSize="15dp" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="8"
            android:id="@+id/eloreBe"
            android:layout_row="0"
            android:layout_column="1"
            android:textStyle="bold"
            android:textSize="15dp"
            android:background="@drawable/input"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:text="H"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="15dp"
            android:textStyle="bold"
            android:background="@drawable/conn"
            android:textColor="#000000" />

        <TextView
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hatra"
        android:id="@+id/hatra"
        android:layout_column="0"
        android:layout_row="1"
        android:gravity="center_vertical|center_horizontal"
        android:background="@drawable/conn"
            android:textStyle="bold"
            android:textSize="15dp" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="8"
            android:id="@+id/hatraBe"
            android:layout_row="1"
            android:layout_column="1"
            android:textStyle="bold"
            android:textSize="15dp"
            android:background="@drawable/input"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="2"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:text="B"
            android:id="@+id/textView3"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/conn"
            android:autoText="true"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#000000"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/balra"
        android:id="@+id/balra"
        android:layout_row="2"
        android:layout_column="0"
        android:gravity="center_vertical|center_horizontal"
        android:background="@drawable/conn"
            android:textStyle="bold"
            android:textSize="15dp" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="8"
            android:id="@+id/balraBe"
            android:layout_row="2"
            android:layout_column="1"
            android:textStyle="bold"
            android:textSize="15dp"
            android:background="@drawable/input"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="3"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:text="J"
            android:id="@+id/textView4"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#000000"
            android:textSize="15dp"
            android:textStyle="bold"
            android:background="@drawable/conn" />

        <TextView
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/jobbra"
        android:id="@+id/jobbra"
        android:layout_row="3"
        android:layout_column="0"
        android:gravity="center_vertical|center_horizontal"
        android:background="@drawable/conn"
        android:textSize="15dp"
        android:textStyle="bold" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="8"
            android:id="@+id/jobbraBe"
            android:layout_row="3"
            android:layout_column="1"
            android:textStyle="bold"
            android:textSize="15dp"
            android:background="@drawable/input"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:textAlignment="center" />
    </LinearLayout>

    <Switch
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:text="@string/szinkron"
        android:id="@+id/sincron"
        android:layout_row="4"
        android:layout_column="0"
        android:background="@drawable/conn"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:showText="false"
        android:textSize="15dp"
        android:textStyle="bold"
        android:checked="false"
        android:layout_columnSpan="2"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:layout_gravity="center" />

    <Button
    android:layout_width="140dp"
    android:layout_height="40dp"
    android:text="@string/mentes"
    android:id="@+id/mentes"
    android:layout_column="0"
    android:layout_row="5"
        android:gravity="center_vertical|center_horizontal"
    android:singleLine="false"
    android:background="@drawable/conn"
    android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_marginTop="5dp"
        android:layout_columnSpan="2"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="6">

        <Button
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:text="@string/hozzaAd"
            android:id="@+id/hozzaAd"
            android:background="@drawable/conn"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginRight="5dp" />

        <Button
            android:layout_width="165dp"
            android:layout_height="40dp"
            android:text="@string/mozdulatsorMentes"
            android:id="@+id/mentes2"
            android:background="@drawable/conn"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"

            />
    </LinearLayout>

    <TextView
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:text="New Text"
        android:id="@+id/hol"
        android:layout_row="7"
        android:layout_column="0"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_columnSpan="2"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:gravity="center_vertical"
        android:background="@drawable/lista"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:autoText="true"
        android:layout_marginBottom="5dp" />

    <EditText
        android:layout_width="305dp"
        android:layout_height="162dp"
        android:id="@+id/mozdulatok"
        android:layout_gravity="center_horizontal"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="8"
        android:background="@drawable/lista"
        android:paddingLeft="8dp"
        android:paddingTop="6dp"
        android:paddingRight="8dp"
        android:paddingBottom="5dp"
        android:textSize="13dp"
        android:textStyle="bold"
        android:gravity="top"
        android:textColor="#000000" />

</GridLayout>
